--- a/wp-content/themes/themify-ultra-child/style.css
+++ b/wp-content/themes/themify-ultra-child/style.css
@@ -13,6 +13,13 @@ Template: themify-ultra
 
 #text-12-sub_row_0-0-2-0-0 .fa { margin-right: 10px; } /* фикс иконок под баннером в топе */
 .top-banner h4 { margin: 0; }
+
+#body .features-descr .gallery-caption { 
+	margin-top: 35px;
+	font-size: 1em; 
+}
+
+#text-12-1-0-3 p { margin-bottom: 0; }
 /*
 * Blog post customization
 */
@@ -24,6 +31,8 @@ Template: themify-ultra
 	color: #fff;
 	border-color: #3d3d3d;
 }
+
+
 
 /*
 * Form styles
@@ -40,7 +49,6 @@ Template: themify-ultra
 	font-weight: 500;
 }
 
-#menu-icon:before { color: #fff; } /* Mobile menu icon color fix */
 
 /**
 * NiceScroll fix
