--- a/wp-content/uploads/themify-css/themify-builder-12-generated.css
+++ b/wp-content/uploads/themify-css/themify-builder-12-generated.css
@@ -25,7 +25,7 @@
 	color: #ffffff
 }
 .themify_builder_12_row.module_row_0.module_row>.builder_row_cover {
-	background:rgba(0,0,0, 0.25)
+	background:rgba(0,0,0, 0.55)
 }
 
 .themify_builder .text-12-0-0-1.module-text { margin-bottom: 7%;  } 
@@ -33,3 +33,11 @@
 .themify_builder .text-12-sub_row_0-0-2-0-0.module-text { text-align: center;  } 
 .themify_builder .text-12-sub_row_0-0-2-2-0.module-text { text-align: center;  } 
 .themify_builder .text-12-sub_row_0-0-2-3-0.module-text { text-align: center;  } 
+/* .themify_builder_12_row.module_row_1 Style */
+.themify_builder_12_row.module_row_1.module_row {
+	padding-top : 5%;
+	padding-bottom : 5%
+}
+
+.themify_builder .text-12-1-0-1.module-text { text-align: center; margin-bottom: 2%;  } 
+.themify_builder .text-12-1-0-3.module-text { text-align: center;  } 
