--- a/wp-content/uploads/themify-css/themify-builder-12-generated.css
+++ b/wp-content/uploads/themify-css/themify-builder-12-generated.css
@@ -85,4 +85,22 @@
 	text-align: center
 }
 
-.themify_builder .text-12-3-0-1.module-text { background-color: #fff; padding-top: 5%; padding-right: 3%; padding-bottom: 3%; padding-left: 3%;  } 
+.themify_builder .text-12-3-0-1.module-text { background-color: #ffffff; padding-top: 5%; padding-bottom: 5%;  } 
+/* .themify_builder_12_row.module_row_4 Style */
+.themify_builder_12_row.module_row_4.module_row {
+	padding-top : 5%;
+	padding-bottom : 1%;
+	border-bottom: #3d3d3d 1px solid
+}
+
+/* .themify_builder_12_row.module_row_5 Style */
+.themify_builder_12_row.module_row_5.module_row {
+	text-align: center;
+	padding-top : 5%;
+	padding-bottom : 5%
+}
+
+.themify_builder .text-12-5-0-1.module-text { margin-bottom: 3%;  } 
+.themify_builder .feature-12-sub_row_5-0-2-0-0.module-feature { text-align: justify;  } 
+.themify_builder .feature-12-sub_row_5-0-2-1-0.module-feature { text-align: justify;  } 
+.themify_builder .feature-12-sub_row_5-0-2-2-0.module-feature { text-align: justify;  } 
